# gapi/rpc_update_user_password.go
@@ -1,0 +1,55 @@
+package gapi
+
+import (
+	"context"
+	"database/sql"
+	db "simplebank/db/sqlc"
+	"simplebank/pb"
+	"simplebank/util"
+	"simplebank/valid"
+	_ "simplebank/valid"
+
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) UpdateUserPassword(ctx context.Context, req *pb.UpdateUserPasswordRequest) (*pb.UpdateUserPasswordResponse, error) {
+	violations := validateUpdateUserPasswordRequest(req)
+	if violations != nil {
+		return nil, violationsError(violations)
+	}
+
+	hashedPassword, err := util.HashedPassword(req.GetPassword())
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to hash password: %v", err)
+	}
+
+	arg := db.UpdateUserHashedPasswordParams{
+		Username:       req.GetUsername(),
+		HashedPassword: hashedPassword,
+	}
+
+	user, err := server.store.UpdateUserHashedPassword(ctx, arg)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return nil, status.Errorf(codes.NotFound, "user not found: %v", err)
+		}
+		return nil, status.Errorf(codes.Internal, "failed to update user password: %v", err)
+	}
+	rsp := &pb.UpdateUserPasswordResponse{
+		User: convertUser(user),
+	}
+
+	return rsp, nil
+}
+
+func validateUpdateUserPasswordRequest(req *pb.UpdateUserPasswordRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := valid.ValidateUsername(req.GetUsername()); err != nil {
+		violations = append(violations, fieldViolation("username", err))
+	}
+	if err := valid.ValidatePassword(req.GetPassword()); err != nil {
+		violations = append(violations, fieldViolation("password", err))
+	}
+	return violations
+}
